# code-format

./: format.c  meson.build  plugin.c  plugin.h  prefs.c  style.c
